feat: html done

--- a/index.html
+++ b/index.html
@@ -17,61 +17,30 @@
 <body>
   <div id="app">
     <main>
-      Desserts
+      <div class="product">
+        <img class="thumb selected-false" src="/src/assets/images/image-waffle-thumbnail.jpg"/>
+        <div  class="btn-container">
+          <button  class="butt cart-butt">
+            <img class="cart-butt-icon" src="/src/assets/images/icon-add-to-cart.svg"/>
+            <span>Add to Cart</span>
+          </button>
+        </div> 
+        <div class="data">
+          <span class="name">Waffle</span>
+          <span class="desc">Waffle with Berries</span>
+          <span class="price">$6.50</span>
+        </div>
 
-      Waffle with Berries
-      Waffle
-      6.50
-      Add to Cart
+      </div>
 
-      Vanilla Bean Crème Brûlée
-      Crème Brûlée
-      7.00
-      Add to Cart
-
-      Macaron Mix of Five
-      Macaron
-      8.00
-      Add to Cart
-
-      Classic Tiramisu
-      Tiramisu
-      5.50
-      Add to Cart
-
-      Pistachio Baklava
-      Baklava
-      4.00
-      Add to Cart
-
-      Lemon Meringue Pie
-      Pie
-      5.00
-      Add to Cart
-
-      Red Velvet Cake
-      Cake
-      4.50
-      Add to Cart
-
-      Salted Caramel Brownie
-      Brownie
-      4.50
-      Add to Cart
-
-      Vanilla Panna Cotta
-      Panna Cotta
-      6.50
-      Add to Cart
-
-      Your Cart (<!-- Quantity -->)
-      Your added items will appear here
-
+      
+    </main>
+    <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-        Coded by <a href="#">Charlie Lages Calaça</a>.
+        Coded by <a href="https://github.com/CharlieL131/desafio_fap-product_list_with_cart">Charlie Lages Calaça</a>.
       </div>
-    </main>
+    </footer>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
