--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 <body>
   <div id="app">
     <main>
-
+      <div id="product-section">
+        <h1>Desserts</h1>
+        <div id="product-container">
+          
+        </div>
+      </div>
     </main>
     <footer>
       <div class="attribution">
