feat: cart implemeted

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           
         </div>
       </div>
+      <div class="cart">
+
+      </div>
     </main>
     <footer>
       <div class="attribution">
